<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_relative_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/bottom_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-2dp"
        android:background="@color/blue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_image"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/lessons_image"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginStart="-25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:onClick="onLessonsClick"
            app:srcCompat="@drawable/lessons"
            tools:ignore="TouchTargetSizeCheck" />


        <ImageView
            android:id="@+id/compass_image"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="-20dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/compass1" />

        <ImageView
            android:id="@+id/settings_image"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/settings1" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/top_Relative_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@+id/main_btn1"
        android:layout_marginBottom="320dp"
        android:background="@color/blue">

        <fragment
            android:id="@+id/map_google"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="2dp"
            tools:context=".MapsActivity" />


    </RelativeLayout>

    <Button
        android:id="@+id/main_btn1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/bottom_linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-60dp"
        android:backgroundTint="@color/blue"
        app:cornerRadius="360dp" />

    <Button
        android:id="@+id/main_btn2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/bottom_linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-45dp"
        android:backgroundTint="@color/blue_light"
        app:cornerRadius="360dp" />


    <ImageView
        android:id="@+id/warning_image"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-27dp"
        android:layout_above="@+id/bottom_linear_layout"
        app:srcCompat="@drawable/warning" />


    <ImageView
        android:id="@+id/map_image_2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_above="@+id/main_btn1"
        android:layout_marginVertical="250dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="243dp"
        app:srcCompat="@drawable/map2" />

    <ImageView
        android:id="@+id/daily_tasks"
        android:layout_width="90dp"
        android:layout_height="65dp"
        android:layout_above="@+id/main_btn1"
        android:layout_marginBottom="170dp"
        app:srcCompat="@drawable/dailly_tasks" />

    <ImageView
        android:id="@+id/safety_btn"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_above="@+id/main_btn1"
        android:layout_marginBottom="80dp"
        app:srcCompat="@drawable/safety1" />

    <TextView
        android:id="@+id/map_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_btn1"
        android:layout_marginStart="-4dp"
        android:layout_marginBottom="262dp"
        android:layout_toEndOf="@+id/map_image_2"
        android:fontFamily="@font/changa_one"
        android:text="@string/map"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textColor="@color/blue"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/daily_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_btn1"
        android:layout_marginStart="-4dp"
        android:layout_marginBottom="175dp"
        android:layout_toEndOf="@+id/map_image_2"
        android:fontFamily="@font/changa_one"
        android:text="@string/daily"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textColor="@color/blue"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/tasks_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_btn1"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="172dp"
        android:layout_toEndOf="@+id/map_image_2"
        android:fontFamily="@font/changa_one"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/tasks"
        android:textColor="@color/blue"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_btn1"
        android:layout_marginStart="-3dp"
        android:layout_marginBottom="92dp"
        android:layout_toEndOf="@+id/map_image_2"
        android:fontFamily="@font/changa_one"
        android:text="@string/about"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textColor="@color/blue"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/lives_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_btn1"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="95dp"
        android:layout_toEndOf="@+id/map_image_2"
        android:fontFamily="@font/changa_one"
        android:text="@string/lives"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textColor="@color/blue"
        android:textSize="35dp" />


</RelativeLayout>

